# helloworld_cpp_vscode

./: CMakeLists.txt  CMakePresets.json
headers/: records.h
src/: helloworld.cpp  records.cpp
